minor changes in table of contents

--- a/thesis.tex
+++ b/thesis.tex
@@ -43,7 +43,7 @@
 	\newcommand{\thetitle}{Experimente zum Type-Checking von Softwareproduktlinien}
 	\newcommand{\thedate}{31. März}
 }{
-	\newcommand{\thetitle}{Performance Visualization Tool}
+	\newcommand{\thetitle}{Visualization of Performance-Influence Models}
 	\newcommand{\thedate}{March 31}
 	\newcommand{\thegermandate}{31. März}
 }
@@ -145,7 +145,7 @@
 
 \include{chapters/introduction}
 \include{chapters/background}
-\include{chapters/implementation}
+\include{chapters/methodology}
 \include{chapters/experiments}
 \include{chapters/evaluation}
 \include{chapters/relatedwork}
