edited - Goal of thesis section

--- a/thesis.tex
+++ b/thesis.tex
@@ -146,8 +146,7 @@
 \include{chapters/introduction}
 \include{chapters/background}
 \include{chapters/methodology}
-\include{chapters/experiments}
-\include{chapters/evaluation}
+\include{chapters/results}
 \include{chapters/relatedwork}
 \include{chapters/conclusion}
 \include{chapters/futurework}
