--- a/tex/tikzstyles.tex
+++ b/tex/tikzstyles.tex
@@ -1,3 +1,15 @@
+\usepackage{booktabs}
+\newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
+\usepackage{booktabs}
+\usepackage{multirow}
+\usepackage{amssymb}
+\usepackage{array,booktabs}
+\newcommand{\bla}{blah blah blah blah blah blah blah blah}
+\newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
+
+\newlength{\ridiculouslylargecmidrulesep}
+\setlength{\ridiculouslylargecmidrulesep}{50pt}
+\usepackage[margin=1in]{geometry} % set margins to meet your document's needs
 \usepackage{pgfplots}
 \usepackage{tikz}
 	\usetikzlibrary{arrows,positioning,backgrounds,fit,trees} 
