--- a/thesis.tex
+++ b/thesis.tex
@@ -28,7 +28,7 @@
 \newcommand{\advisorone}{Dr.-Ing.\ Sven Apel}
 \newcommand{\departmentone}{Software Product-Line Group}
 
-\newcommand{\advisortwo}{Christian Kaltenecker, Ph.D.} 
+\newcommand{\advisortwo}{Christian Kaltenecker} 
 \newcommand{\departmenttwo}{ Chair of Software Engineering I}
 
 % Thesis kind
