edited results chapter

--- a/tex/tikzstyles.tex
+++ b/tex/tikzstyles.tex
@@ -3,8 +3,9 @@
 \usepackage{booktabs}
 \usepackage{multirow}
 \usepackage{amssymb}
+\usepackage{adjustbox}
+\usepackage{lipsum}% example text
 \usepackage{array,booktabs}
-\newcommand{\bla}{blah blah blah blah blah blah blah blah}
 \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
 
 \newlength{\ridiculouslylargecmidrulesep}
