--- a/thesis.tex
+++ b/thesis.tex
@@ -26,7 +26,7 @@
 \newcommand{\grouplogo}{\includegraphics[height=1.5cm]{spl}}
 
 \newcommand{\advisorone}{Dr.-Ing.\ Sven Apel}
-\newcommand{\departmentone}{Software Product-Line Group}
+\newcommand{\departmentone}{Chair of Software Engineering I}
 
 \newcommand{\advisortwo}{Christian Kaltenecker} 
 \newcommand{\departmenttwo}{ Chair of Software Engineering I}
@@ -146,7 +146,7 @@
 \include{chapters/introduction}
 \include{chapters/background}
 \include{chapters/methodology}
-\include{chapters/results}
+\include{chapters/evaluation}
 \include{chapters/relatedwork}
 \include{chapters/conclusion}
 \include{chapters/futurework}
@@ -167,9 +167,8 @@
 \addcontentsline{toc}{chapter}{\bibname} % 
 \bibliographystyle{alpha} % plain gerplain abbrvnat unsrtnat alphag alpha
 % in a thesis you have space... use full names
-\bibliography{literature/IEEEfull,literature/MYfull,literature/literature}
+\bibliography{literature/bibliography}
 % in a paper, space is limited. use abreviations
-%\bibliography{../literature/IEEEabrv,../literature/MYabrv,../literature/literature}
 
 %*********************************************************************%
 % ERKLÄRUNG                                                           %
