folder structure, evaluation chapter

--- a/literature/bibliography.bib
+++ b/literature/bibliography.bib
@@ -1,24 +1,8 @@
 % Encoding: UTF-8
 
-@InProceedings{DBLP:conf/sigsoft/SiegmundGAK15,
-  author    = {Norbert Siegmund and Alexander Grebhahn and Sven Apel and Christian K{\"{a}}stner},
-  title     = {Performance-influence models for highly configurable systems},
-  booktitle = {Proceedings of the 2015 10th Joint Meeting on Foundations of Software Engineering, {ESEC/FSE} 2015, Bergamo, Italy, August 30 - September 4, 2015},
-  year      = {2015},
-  pages     = {284--294},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/bib/conf/sigsoft/SiegmundGAK15},
-  crossref  = {DBLP:conf/sigsoft/2015},
-  doi       = {10.1145/2786805.2786845},
-  timestamp = {Tue, 06 Nov 2018 16:59:23 +0100},
-  url       = {https://doi.org/10.1145/2786805.2786845},
-}
-
 @InProceedings{DBLP:conf/se/SiegmundGAK16,
   author    = {Norbert Siegmund and Alexander Grebhahn and Sven Apel and Christian K{\"{a}}stner},
   title     = {Performance-Influence Models},
-  booktitle = {Software Engineering 2016, Fachtagung des GI-Fachbereichs Softwaretechnik, 23.-26. Februar 2016, Wien, {\"{O}}sterreich},
-  year      = {2016},
   pages     = {29--31},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/bib/conf/se/SiegmundGAK16},
@@ -30,8 +14,6 @@
 @InProceedings{DBLP:conf/eusflat/GrzegorzewskiS17,
   author    = {Przemyslaw Grzegorzewski and Martyna Spiewak},
   title     = {The Mann-Whitney Test for Interval-Valued Data},
-  booktitle = {Advances in Fuzzy Logic and Technology 2017 - Proceedings of: {EUSFLAT-} 2017 - The 10th Conference of the European Society for Fuzzy Logic and Technology, September 11-15, 2017, Warsaw, Poland IWIFSGN'2017 - The Sixteenth International Workshop on Intuitionistic Fuzzy Sets and Generalized Nets, September 13-15, 2017, Warsaw, Poland, Volume 2},
-  year      = {2017},
   pages     = {188--199},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/bib/conf/eusflat/GrzegorzewskiS17},
@@ -44,8 +26,6 @@
 @InProceedings{DBLP:conf/ppopp/AwadAJFO19,
   author    = {Muhammad A. Awad and Saman Ashkiani and Rob Johnson and Martin Farach{-}Colton and John D. Owens},
   title     = {Engineering a high-performance {GPU} B-Tree},
-  booktitle = {Proceedings of the 24th {ACM} {SIGPLAN} Symposium on Principles and Practice of Parallel Programming, PPoPP 2019, Washington, DC, USA, February 16-20, 2019},
-  year      = {2019},
   pages     = {145--157},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/bib/conf/ppopp/AwadAJFO19},
@@ -69,25 +49,9 @@
   url       = {https://doi.org/10.1109/ES.2018.00009},
 }
 
-@InProceedings{DBLP:conf/pldi/JinSSSL12,
-  author    = {Guoliang Jin and Linhai Song and Xiaoming Shi and Joel Scherpelz and Shan Lu},
-  title     = {Understanding and detecting real-world performance bugs},
-  booktitle = {{ACM} {SIGPLAN} Conference on Programming Language Design and Implementation, {PLDI} '12, Beijing, China - June 11 - 16, 2012},
-  year      = {2012},
-  pages     = {77--88},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/bib/conf/pldi/JinSSSL12},
-  crossref  = {DBLP:conf/pldi/2012},
-  doi       = {10.1145/2254064.2254075},
-  timestamp = {Tue, 06 Nov 2018 16:59:30 +0100},
-  url       = {https://doi.org/10.1145/2254064.2254075},
-}
-
 @InProceedings{DBLP:conf/sc/BhateleGIGSBH12,
   author    = {Abhinav Bhatele and Todd Gamblin and Katherine E. Isaacs and Brian T. N. Gunney and Martin Schulz and Peer{-}Timo Bremer and Bernd Hamann},
   title     = {Novel views of performance data to analyze large-scale adaptive applications},
-  booktitle = {{SC} Conference on High Performance Computing Networking, Storage and Analysis, {SC} '12, Salt Lake City, UT, {USA} - November 11 - 15, 2012},
-  year      = {2012},
   pages     = {31},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/bib/conf/sc/BhateleGIGSBH12},
@@ -100,8 +64,6 @@
 @InProceedings{DBLP:conf/cluster/HaynesCR01,
   author    = {Rena A. Haynes and Patricia Crossno and Eric Russell},
   title     = {A Visualization Tool for Analyzing Cluster Performance Data},
-  booktitle = {2001 {IEEE} International Conference on Cluster Computing {(CLUSTER} 2001), 8-11 October 2001, Newport Beach, CA, {USA}},
-  year      = {2001},
   pages     = {295--302},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/bib/conf/cluster/HaynesCR01},
@@ -111,27 +73,43 @@
   url       = {https://doi.org/10.1109/CLUSTR.2001.959990},
 }
 
+@InProceedings{DBLP:conf/sigsoft/SiegmundGAK15,
+  author    = {Norbert Siegmund and Alexander Grebhahn and Sven Apel and Christian K{\"{a}}stner},
+  title     = {Performance-influence models for highly configurable systems},
+  pages     = {284--294},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/bib/conf/sigsoft/SiegmundGAK15},
+  doi       = {10.1145/2786805.2786845},
+  timestamp = {Tue, 06 Nov 2018 16:59:23 +0100},
+  url       = {https://doi.org/10.1145/2786805.2786845},
+}
+
+@InProceedings{DBLP:conf/pldi/JinSSSL12,
+  author    = {Guoliang Jin and Linhai Song and Xiaoming Shi and Joel Scherpelz and Shan Lu},
+  title     = {Understanding and detecting real-world performance bugs},
+  pages     = {77--88},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/bib/conf/pldi/JinSSSL12},
+  doi       = {10.1145/2254064.2254075},
+  timestamp = {Tue, 06 Nov 2018 16:59:30 +0100},
+  url       = {https://doi.org/10.1145/2254064.2254075},
+}
+
 @InProceedings{DBLP:conf/parco/MullerKJLBMN07,
   author    = {Matthias S. M{\"{u}}ller and Andreas Kn{\"{u}}pfer and Matthias Jurenz and Matthias Lieber and Holger Brunst and Hartmut Mix and Wolfgang E. Nagel},
   title     = {Developing Scalable Applications with Vampir, VampirServer and VampirTrace},
-  booktitle = {Parallel Computing: Architectures, Algorithms and Applications, ParCo 2007, Forschungszentrum J{\"{u}}lich and {RWTH} Aachen University, Germany, 4-7 September 2007},
-  year      = {2007},
   pages     = {637--644},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/bib/conf/parco/MullerKJLBMN07},
-  crossref  = {DBLP:conf/parco/2007},
   timestamp = {Mon, 16 Feb 2009 08:49:21 +0100},
 }
 
 @InProceedings{DBLP:conf/icse/SiegmundKKABRS12,
   author    = {Norbert Siegmund and Sergiy S. Kolesnikov and Christian K{\"{a}}stner and Sven Apel and Don S. Batory and Marko Rosenm{\"{u}}ller and Gunter Saake},
   title     = {Predicting performance via automated feature-interaction detection},
-  booktitle = {34th International Conference on Software Engineering, {ICSE} 2012, June 2-9, 2012, Zurich, Switzerland},
-  year      = {2012},
   pages     = {167--177},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/bib/conf/icse/SiegmundKKABRS12},
-  crossref  = {DBLP:conf/icse/2012},
   doi       = {10.1109/ICSE.2012.6227196},
   timestamp = {Sun, 04 Jun 2017 10:09:48 +0200},
   url       = {https://doi.org/10.1109/ICSE.2012.6227196},
@@ -140,8 +118,6 @@
 @InProceedings{DBLP:conf/birthday/ChungL09,
   author    = {Lawrence Chung and Julio Cesar Sampaio do Prado Leite},
   title     = {On Non-Functional Requirements in Software Engineering},
-  booktitle = {Conceptual Modeling: Foundations and Applications - Essays in Honor of John Mylopoulos},
-  year      = {2009},
   pages     = {363--379},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/bib/conf/birthday/ChungL09},
@@ -153,8 +129,6 @@
 @InProceedings{DBLP:conf/vissym/IsaacsGJGB0HB14,
   author    = {Katherine E. Isaacs and Alfredo Gim{\'{e}}nez and Ilir Jusufi and Todd Gamblin and Abhinav Bhatele and Martin Schulz and Bernd Hamann and Peer{-}Timo Bremer},
   title     = {State of the Art of Performance Visualization},
-  booktitle = {Eurographics Conference on Visualization, EuroVis 2014 - State of the Art Reports, STARs, Swansea, UK, June 9-13, 2014},
-  year      = {2014},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/bib/conf/vissym/IsaacsGJGB0HB14},
   doi       = {10.2312/eurovisstar.20141177},
@@ -173,19 +147,6 @@
   doi       = {10.1007/978-3-642-37521-7},
   timestamp = {Tue, 16 May 2017 14:01:34 +0200},
   url       = {https://doi.org/10.1007/978-3-642-37521-7},
-}
-
-@Proceedings{DBLP:conf/sigsoft/2015,
-  title     = {Proceedings of the 2015 10th Joint Meeting on Foundations of Software Engineering, {ESEC/FSE} 2015, Bergamo, Italy, August 30 - September 4, 2015},
-  year      = {2015},
-  editor    = {Elisabetta Di Nitto and Mark Harman and Patrick Heymans},
-  publisher = {{ACM}},
-  isbn      = {978-1-4503-3675-8},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/bib/conf/sigsoft/2015},
-  doi       = {10.1145/2786805},
-  timestamp = {Tue, 06 Nov 2018 16:59:22 +0100},
-  url       = {https://doi.org/10.1145/2786805},
 }
 
 @Proceedings{DBLP:conf/se/2016,
@@ -281,30 +242,6 @@
 @Misc{,
 }
 
-@Proceedings{DBLP:conf/pldi/2012,
-  title     = {{ACM} {SIGPLAN} Conference on Programming Language Design and Implementation, {PLDI} '12, Beijing, China - June 11 - 16, 2012},
-  year      = {2012},
-  editor    = {Jan Vitek and Haibo Lin and Frank Tip},
-  publisher = {{ACM}},
-  isbn      = {978-1-4503-1205-9},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/bib/conf/pldi/2012},
-  timestamp = {Tue, 12 Jun 2012 19:17:55 +0200},
-  url       = {http://dl.acm.org/citation.cfm?id=2254064},
-}
-
-@Proceedings{DBLP:conf/vissym/2014stars,
-  title     = {Eurographics Conference on Visualization, EuroVis 2014 - State of the Art Reports, STARs, Swansea, UK, June 9-13, 2014},
-  year      = {2014},
-  editor    = {Rita Borgo and Ross Maciejewski and Ivan Viola},
-  publisher = {Eurographics Association},
-  isbn      = {978-3-03868-028-4},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/bib/conf/vissym/2014stars},
-  timestamp = {Fri, 17 Aug 2018 17:02:21 +0200},
-  url       = {https://diglib.eg.org/handle/10.2312/7749},
-}
-
 @Proceedings{DBLP:conf/sc/2012,
   title     = {{SC} Conference on High Performance Computing Networking, Storage and Analysis, {SC} '12, Salt Lake City, UT, {USA} - November 11 - 15, 2012},
   year      = {2012},
@@ -328,29 +265,20 @@
   url       = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=7602},
 }
 
-@Proceedings{DBLP:conf/parco/2007,
-  title     = {Parallel Computing: Architectures, Algorithms and Applications, ParCo 2007, Forschungszentrum J{\"{u}}lich and {RWTH} Aachen University, Germany, 4-7 September 2007},
-  year      = {2008},
-  editor    = {Christian H. Bischof and H. Martin B{\"{u}}cker and Paul Gibbon and Gerhard R. Joubert and Thomas Lippert and Bernd Mohr and Frans J. Peters},
-  volume    = {15},
-  series    = {Advances in Parallel Computing},
-  publisher = {{IOS} Press},
-  isbn      = {978-1-58603-796-3},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/bib/conf/parco/2007},
-  timestamp = {Mon, 16 Feb 2009 08:47:23 +0100},
+@Article{DBLP:article/tog/Herman16,
+  author = {L. Herman a, *, Z. Stachoň a},
+  title  = {COMPARISON OF USER PERFORMANCE WITH INTERACTIVE AND STATIC 3D VISUALIZATION – PILOT STUDY},
+  year   = {2016},
 }
 
-@Proceedings{DBLP:conf/icse/2012,
-  title     = {34th International Conference on Software Engineering, {ICSE} 2012, June 2-9, 2012, Zurich, Switzerland},
-  year      = {2012},
-  editor    = {Martin Glinz and Gail C. Murphy and Mauro Pezz{\`{e}}},
-  publisher = {{IEEE} Computer Society},
-  isbn      = {978-1-4673-1067-3},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/bib/conf/icse/2012},
-  timestamp = {Tue, 03 May 2016 16:08:27 +0200},
-  url       = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=6218989},
+@article{pearson1896vii,
+  title={VII. Mathematical contributions to the theory of evolution.—III. Regression, heredity, and panmixia},
+  author={Pearson, Karl},
+  journal={Philosophical Transactions of the Royal Society of London. Series A, containing papers of a mathematical or physical character},
+  number={187},
+  pages={253--318},
+  year={1896},
+  publisher={The Royal Society London}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
