--- a/tex/tikzstyles.tex
+++ b/tex/tikzstyles.tex
@@ -4,7 +4,8 @@
 \usepackage{graphicx}
 \usepackage{booktabs}
 \raggedbottom
-
+\usepackage{forest}
+\usepackage{relsize}
 \usepackage{breqn}
 \usepackage[font=small,labelfont=bf]{caption}
 \usepackage[bookmarksnumbered=true]{hyperref}
@@ -17,6 +18,21 @@
      urlcolor = blue
      }
 \usepackage{pgfplotstable}
+
+
+\definecolor{folderbg}{RGB}{124,166,198}
+\definecolor{folderborder}{RGB}{110,144,169}
+
+\def\Size{4pt}
+\tikzset{
+  folder/.pic={
+    \filldraw[draw=folderborder,top color=folderbg!50,bottom color=folderbg]
+      (-1.05*\Size,0.2\Size+5pt) rectangle ++(.75*\Size,-0.2\Size-5pt);  
+    \filldraw[draw=folderborder,top color=folderbg!50,bottom color=folderbg]
+      (-1.15*\Size,-\Size) rectangle (1.15*\Size,\Size);
+  }
+}
+
 
 \usepackage{pgfplots}
     \pgfplotscreateplotcyclelist{my colors}{
