--- a/tex/tikzstyles.tex
+++ b/tex/tikzstyles.tex
@@ -57,7 +57,7 @@
 \usepackage{float}
 \usepackage{amssymb}
 \usepackage{adjustbox}
-\usepackage{mdframed}
+\usepackage[framemethod=tikz]{mdframed}
 \usepackage{lipsum}% example text
 \usepackage{array,booktabs}
 \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
