--- a/thesis.tex
+++ b/thesis.tex
@@ -41,13 +41,13 @@
 \newcommand{\thesurname}{Lewis}
 \ifgerman{ 
 	\newcommand{\thetitle}{Experimente zum Type-Checking von Softwareproduktlinien}
-	\newcommand{\thedate}{31. März}
+	\newcommand{\thedate}{16. May}
 }{
 	\newcommand{\thetitle}{Visualization of Performance-Influence Models}
-	\newcommand{\thedate}{March 31}
-	\newcommand{\thegermandate}{31. März}
+	\newcommand{\thedate}{May 16}
+	\newcommand{\thegermandate}{16. Mai}
 }
-\newcommand{\theyear}{2018}
+\newcommand{\theyear}{2019}
 \ifgerman{ 
 	\newcommand{\thefullgermandate}{\thedate\ \theyear}
 }{
